--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,10 @@
-<h1>Riglog</h1>
+<html>
+	<head>
+		<title>Riglog</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	</head>
+	<body>
+    <h1>Riglog</h1>
+  </body>
+</html>
