--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 
 		<h2>Stav projektu</h2>
 		<ul>
-			<li>květen 2021 - příprava a zahájení prací na API</li>
+			<li>květen 2021 - návrh struktury projektu a zahájení prací na API</li>
 		</ul>
 
 		<p style="text-align: center; font-size: 10px; margin-top: 30px;">Autor: <a href="https://github.com/stulda">Michal Stulík</a></p>
