--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,8 @@
 		<title>Riglog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap" rel="stylesheet">
 		<style>
-			* {font-family: 'Roboto', sans-serif;}
+			* {font-family: sans-serif;}
 			body {background-color: #f5f5f5;}
 			h1 {margin-top: 0px; margin-bottom: 10px; font-size: 48px; letter-spacing: 0.1em;}
 			hr {border: 0; border-top: 1px solid #f0f0f0; margin-top: 20px; margin-bottom: 20px;}
@@ -41,16 +39,16 @@
 		<h2>Struktura projektu (repozitáře)</h2>
 		<ul>
 			<li>
-				<a href="https://github.com/riglog/Riglog.Api">Api</a>: Rest API backend v .NET 5
+				<a href="https://github.com/riglog/Riglog.Api">Riglog.Api</a>: Rest API backend v .NET 5
 			</li>
 			<li>
-				<a href="https://github.com/riglog/Riglog.App">App</a>: Apolkace pro Android, iOS, možná Windows a do budoucna i MacOS (Xamarin Forms).
+				<a href="https://github.com/riglog/Riglog.App">Riglog.App</a>: Apolkace pro Android, iOS, možná Windows a do budoucna i MacOS (Xamarin Forms).
 			</li>
 			<li>
-				<a href="https://github.com/riglog/Riglog.Web">Web</a>: Webový frontend aplikace (Pravděpodobně <s>Blazor,</s> vue.js nebo něco podobného).
+				<a href="https://github.com/riglog/Riglog.Web">Riglog.Web</a>: Webový frontend aplikace (Pravděpodobně <s>Blazor,</s> vue.js nebo něco podobného).
 			</li>
 			<li>
-				<a href="https://github.com/riglog/Riglog.Site">Site</a>: Tato jednoduchá statická informační stránka.
+				<a href="https://github.com/riglog/Riglog.Site">Riglog.Site</a>: Tato jednoduchá statická informační stránka.
 			</li>
 		</ul>
 
@@ -59,7 +57,7 @@
 			<li>květen 2021 - návrh struktury projektu a zahájení prací na API</li>
 		</ul>
 
-		<p style="text-align: center; font-size: 10px; margin-top: 30px;">Autor: <a href="https://github.com/stulda">Michal Stulík</a></p>
+		<p style="text-align: center; font-size: 10px; margin-top: 40px; padding-top: 15px; border-top: 1px solid #f0f0f0;">Autor: <a href="https://github.com/stulda">Michal Stulík</a></p>
 
 	</section>
     
