Fonts and colors changes

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,11 @@
 			* {font-family: sans-serif;}
 			body {background-color: #f5f5f5;}
 			h1 {margin-top: 0px; margin-bottom: 10px; font-size: 48px; letter-spacing: 0.1em;}
+			h2 {font-weight: normal;}
 			hr {border: 0; border-top: 1px solid #f0f0f0; margin-top: 20px; margin-bottom: 20px;}
 			li {margin-bottom: 10px;}
 			a {color: tomato}
+			li, p, i {color: #5f5f5f; font-weight: lighter;}
 			section {
 				padding: 40px 40px 10px 40px; 
 				margin: 20px auto; 
@@ -23,7 +25,7 @@
 	<section>
 		<h1>Riglog</h1>
 		<hr>
-		GitHub: <a href="https://github.com/riglog" title="GitHub">https://github.com/riglog</a>
+		<p>GitHub: <a href="https://github.com/riglog" title="GitHub">https://github.com/riglog</a></p>
 		<hr>
 		<p>
 		<i>Evidence IT vybavení, primárně serverů, desktopů a do budoucna třeba i síťových prvků atd.</i>
