--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,16 @@
 				border: 1px solid #f0f0f0;
 				max-width: 640px;
 			}
+			@media screen and (max-width: 640px) {
+				section {
+					margin: auto;
+				}
+			  }
+			@media screen and (max-width: 400px) {
+				section {
+					padding: 20px 20px 10px 20px;
+				}
+			  }
 		</style>
 	</head>
 	<body>
