--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="cs">
 	<head>
 		<title>Riglog</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<style>
 			* {font-family: sans-serif;}
 			body {background-color: #f5f5f5;}
