--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,13 @@
 			hr {border: 0; border-top: 1px solid #f0f0f0; margin-top: 20px; margin-bottom: 20px;}
 			li {margin-bottom: 10px;}
 			a {color: tomato}
-			li, p, i {color: #5f5f5f; font-weight: lighter;}
+			li, p, i {color: #5f5f5f; font-weight: lighter; line-height: 1.5em;}
 			section {
 				padding: 40px 40px 10px 40px; 
 				margin: 20px auto; 
 				background-color: white;
-				border: 1px solid #f0f0f0;
-				max-width: 640px;
+				border: 1px solid #d0d0d0;
+				max-width: 800px;
 			}
 			@media screen and (max-width: 640px) {
 				section {
