--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 			a {color: tomato}
 			li, p, i {color: #5f5f5f; font-weight: lighter; line-height: 1.5em;}
 			section {
-				padding: 40px 40px 10px 40px; 
+				padding: 40px 40px 0px 40px; 
 				margin: 20px auto; 
 				background-color: white;
 				border: 1px solid #d0d0d0;
@@ -70,7 +70,9 @@
 			<li>květen 2021 - návrh struktury projektu a zahájení prací na API</li>
 		</ul>
 
-		<p style="text-align: center; font-size: 10px; margin-top: 40px; padding-top: 15px; border-top: 1px solid #f0f0f0;">Autor: <a href="https://github.com/stulda">Michal Stulík</a></p>
+		<p style="text-align: center; font-size: 10px; margin-top: 40px; padding-top: 10px; border-top: 1px solid #f0f0f0;">
+			Autor: <a href="https://github.com/stulda">Michal Stulík</a>
+		</p>
 
 	</section>
     
