--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 			li {margin-bottom: 10px;}
 			a {color: tomato}
 			li, p, i {color: #5f5f5f; font-weight: lighter; line-height: 1.5em;}
-			section {
+			main {
 				padding: 40px 40px 0px 40px; 
 				margin: 20px auto; 
 				background-color: white;
@@ -33,7 +33,7 @@
 		</style>
 	</head>
 	<body>
-	<section>
+	<main>
 		<h1>Riglog</h1>
 		<hr>
 		<p>GitHub: <a href="https://github.com/riglog" title="GitHub">https://github.com/riglog</a></p>
@@ -74,7 +74,7 @@
 			Autor: <a href="https://github.com/stulda">Michal Stulík</a>
 		</p>
 
-	</section>
+	</main>
     
   </body>
 </html>
