--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 		<title>Riglog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/png" href="favicon.png">
 		<style>
 			* {font-family: sans-serif;}
 			body {background-color: #f5f5f5;}
