--- a/public/index.html
+++ b/public/index.html
@@ -5,17 +5,33 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="icon" type="image/png" href="favicon.png">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 		<style>
 			* {font-family: sans-serif;}
 			body {background-color: #f5f5f5;}
-			h1 {margin-top: 0px; margin-bottom: 10px;font-size: 48px; letter-spacing: 0.1em;}
+			h1 {
+				font-family: 'Montserrat', sans-serif;
+				margin-top: 0px; 
+				margin-bottom: 
+				10px;font-size: 40px; 
+				letter-spacing: 0.1em; 
+				text-align: center;
+			}
 			h2 {font-weight: normal;}
 			hr {border: 0; border-top: 1px solid #f0f0f0; margin-top: 20px; margin-bottom: 20px;}
 			li {margin-bottom: 10px;}
-			a {color: tomato}
+			a {color: #ff8b24}
 			li, p, i {color: #5f5f5f; font-weight: lighter; line-height: 1.5em;}
+			.logo {
+				text-align: center;
+			}
+			.logo img {
+				max-width: 100px;
+				height: auto;
+			}
 			.container {
-				padding: 40px 40px 0px 40px; 
+				padding: 20px 40px 0px 40px; 
 				margin: 20px auto; 
 				background-color: white;
 				border: 1px solid #d0d0d0;
@@ -35,11 +51,12 @@
 	</head>
 	<body>
 	<div class="container">
-		<h1>Riglog</h1>
+		<div class="logo"><img src="logo.png" alt="Riglog"></div>
+		<h1>RIGLOG</h1>
 		<hr>
-		<p>GitHub: <a href="https://github.com/riglog" title="GitHub">https://github.com/riglog</a></p>
+		<p style="text-align: center;">GitHub: <a href="https://github.com/riglog" title="GitHub">https://github.com/riglog</a></p>
 		<hr>
-		<p>
+		<p style="text-align: center;">
 		<i>Evidence IT vybavení, primárně serverů, desktopů a do budoucna třeba i síťových prvků atd.</i>
 		</p>
 
