Normal font for mobile devices

--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
 				.container {
 					margin: auto;
 				}
+				li, p, i {font-weight: normal; }
 			  }
 			@media screen and (max-width: 400px) {
 				.container {
