--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 		<style>
-			* {font-family: sans-serif;}
-			body {background-color: #f5f5f5;}
+			* { font-family: sans-serif; }
+			body { background-color: #f5f5f5; }
 			h1 {
 				font-family: 'Montserrat', sans-serif;
 				margin-top: 0px; 
@@ -18,11 +18,11 @@
 				letter-spacing: 0.1em; 
 				text-align: center;
 			}
-			h2 {font-weight: normal;}
-			hr {border: 0; border-top: 1px solid #f0f0f0; margin-top: 20px; margin-bottom: 20px;}
-			li {margin-bottom: 10px;}
-			a {color: #ff8b24}
-			li, p, i {color: #5f5f5f; font-weight: lighter; line-height: 1.5em;}
+			h2 { font-weight: normal; }
+			hr { border: 0; border-top: 1px solid #f0f0f0; margin-top: 20px; margin-bottom: 20px; }
+			li { margin-bottom: 10px; }
+			a { color: #ff8b24}
+			li, p, i { color: #5f5f5f; font-weight: lighter; line-height: 1.5em; }
 			.logo {
 				text-align: center;
 			}
@@ -42,12 +42,19 @@
 					margin: auto;
 				}
 				li, p, i {font-weight: normal; }
-			  }
+			}
 			@media screen and (max-width: 400px) {
 				.container {
 					padding: 20px 20px 00px 20px;
 				}
-			  }
+			}
+			.footer {
+				text-align: center;
+				font-size: 10px;
+				margin-top: 40px;
+				padding-top: 10px;
+				border-top: 1px solid #f0f0f0;
+			}
 		</style>
 	</head>
 	<body>
@@ -89,7 +96,7 @@
 			<li>květen 2021 - návrh struktury projektu a zahájení prací na API</li>
 		</ul>
 
-		<p style="text-align: center; font-size: 10px; margin-top: 40px; padding-top: 10px; border-top: 1px solid #f0f0f0;">
+		<p class="footer">
 			Autor: <a href="https://github.com/stulda">Michal Stulík</a>
 		</p>
 
