--- a/public/index.html
+++ b/public/index.html
@@ -93,7 +93,7 @@
 
 		<h2>Stav projektu</h2>
 		<ul>
-			<li>květen 2021 - návrh struktury projektu a zahájení prací na API</li>
+			<li>květen 2021 - návrh struktury projektu, vytvoření informačního webu a zahájení prací na API</li>
 		</ul>
 
 		<p class="footer">
