--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,9 @@
 		<title>Riglog</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="icon" type="image/png" href="favicon.png">
+		<link rel="icon" media="(prefers-color-scheme:dark)"  type="image/png" href="img/favicon-alt.png">
+		<link rel="icon" media="(prefers-color-scheme:light)" type="image/png" href="img/favicon.png">
+		<script src="js/favicon.js" type="application/javascript"></script>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
 		<style>
@@ -59,7 +61,7 @@
 	</head>
 	<body>
 	<div class="container">
-		<div class="logo"><img src="logo.png" alt="Riglog"></div>
+		<div class="logo"><img src="img/logo.png" alt="Riglog"></div>
 		<h1>RIGLOG</h1>
 		<hr>
 		<p style="text-align: center;">GitHub: <a href="https://github.com/riglog" title="GitHub">https://github.com/riglog</a></p>
@@ -102,5 +104,8 @@
 
 	</div>
     
+	
+
+
   </body>
 </html>
