--- a/public/index.html
+++ b/public/index.html
@@ -104,7 +104,7 @@
 				<a href="https://github.com/riglog/Riglog.Api">Riglog.Api</a>: Rest API backend v .NET 5
 			</li>
 			<li>
-				<a href="https://github.com/riglog/Riglog.App">Riglog.App</a>: Apolkace pro Android, iOS, možná Windows a do budoucna i MacOS (Xamarin Forms).
+				<a href="https://github.com/riglog/Riglog.App">Riglog.App</a>: Aplikace pro Android, iOS, možná Windows a do budoucna i MacOS (Xamarin Forms).
 			</li>
 			<li>
 				<a href="https://github.com/riglog/Riglog.Web">Riglog.Web</a>: Webový frontend aplikace (Pravděpodobně <s>Blazor,</s> vue.js nebo něco podobného).
