Fixed logo with and height

--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
 			<picture>
 				<source srcset="img/logo.png" media="(prefers-color-scheme: light) or (prefers-color-scheme: no-preference)">
 				<source srcset="img/logo-alt.png" media="(prefers-color-scheme: dark)">
-				<img src="img/logo.png" alt="RIGLOG" />
+				<img src="img/logo.png" alt="RIGLOG" width="100" height="100" />
 			</picture>
 		</div>
 		<h1>RIGLOG</h1>
