--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,8 @@
 
 		<h2>Stav projektu</h2>
 		<ul>
-			<li>květen 2021 - návrh struktury projektu, vytvoření informačního webu a zahájení prací na API</li>
+			<li>Červen 2021 - API: Autentizace, verzování, Swagger, základní databázový model. DevOps: Automatické nasazení API do Azure a automatické publikování docker obrazů na DockerHub.</li>
+			<li>Květen 2021 - Návrh struktury projektu, vytvoření informačního webu a zahájení prací na API.</li>
 		</ul>
 
 		<p class="footer">
