--- a/public/index.html
+++ b/public/index.html
@@ -101,17 +101,18 @@
 		<h2>Struktura projektu (repozitáře)</h2>
 		<ul>
 			<li>
+				<a href="https://github.com/riglog/Riglog.Site">Riglog.Site</a>: Tato jednoduchá statická informační stránka.
+			</li>
+			<li>
 				<a href="https://github.com/riglog/Riglog.Api">Riglog.Api</a>: Rest API backend v .NET 5
 			</li>
 			<li>
-				<a href="https://github.com/riglog/Riglog.App">Riglog.App</a>: Aplikace pro Android, iOS, možná Windows a do budoucna i MacOS (Xamarin Forms).
+				<a href="https://github.com/riglog/Riglog.Maui">Riglog.Maui</a>: Multiplatformní aplikace pro Android, iOS, možná Windows a do budoucna i MacOS (.NET MAUI).
 			</li>
 			<li>
-				<a href="https://github.com/riglog/Riglog.Web">Riglog.Web</a>: Webový frontend aplikace (Pravděpodobně <s>Blazor,</s> vue.js nebo něco podobného).
+				<a href="https://github.com/riglog/Riglog.WebApp">Riglog.WebApp</a>: Webový frontend aplikace (Pravděpodobně <s>Blazor,</s> vue.js nebo něco podobného).
 			</li>
-			<li>
-				<a href="https://github.com/riglog/Riglog.Site">Riglog.Site</a>: Tato jednoduchá statická informační stránka.
-			</li>
+			
 		</ul>
 
 		<h2>Stav projektu</h2>
