--- a/public/index.html
+++ b/public/index.html
@@ -117,6 +117,7 @@
 
 		<h2>Stav projektu</h2>
 		<ul>
+			<li>Prosinec 2021, Leden 2022 - Dočasně u ledu</li>
 			<li>Listopad 2021 - Nový Azure účet, API zmigrováno do .NET 6</li>
 			<li>Září, Říjen 2021 - Přešlapování na místě. Příprava na .NET 6 a .NET MAUI</li>
 			<li>Červenec, Srpen 2021 - Dovolená :)</li>
