--- a/public/index.html
+++ b/public/index.html
@@ -117,8 +117,9 @@
 
 		<h2>Stav projektu</h2>
 		<ul>
+			<li>Únor 2022 - Nový Azure účet</li>
 			<li>Prosinec 2021, Leden 2022 - Dočasně u ledu</li>
-			<li>Listopad 2021 - Nový Azure účet, API zmigrováno do .NET 6</li>
+			<li>Listopad 2021 - API zmigrováno do .NET 6</li>
 			<li>Září, Říjen 2021 - Přešlapování na místě. Příprava na .NET 6 a .NET MAUI</li>
 			<li>Červenec, Srpen 2021 - Dovolená :)</li>
 			<li>Červen 2021 - API: Autentizace, verzování, Swagger, základní databázový model. DevOps: Automatické nasazení API do Azure a automatické publikování docker obrazů na DockerHub.</li>
